c/soloud_c.h


typedef void * Soloud;

typedef void * AudioSource;

typedef void * Filter;


/*
 * Soloud
 */
void Soloud_destroy(Soloud * aSoloud);

Soloud * Soloud_create();

int Soloud_init(Soloud * aSoloud);

int Soloud_initEx(Soloud * aSoloud, unsigned int aFlags /* = Soloud::CLIP_ROUNDOFF */, unsigned int aBackend /* = Soloud::AUTO */, unsigned int aSamplerate /* = Soloud::AUTO */, unsigned int aBufferSize /* = Soloud::AUTO */, unsigned int aChannels /* = 2 */);

int Soloud_pause(Soloud * aSoloud);

int Soloud_resume(Soloud * aSoloud);

void Soloud_deinit(Soloud * aSoloud);

unsigned int Soloud_getVersion(Soloud * aSoloud);

const char * Soloud_getErrorString(Soloud * aSoloud, int aErrorCode);

unsigned int Soloud_getBackendId(Soloud * aSoloud);

const char * Soloud_getBackendString(Soloud * aSoloud);

unsigned int Soloud_getBackendChannels(Soloud * aSoloud);

unsigned int Soloud_getBackendSamplerate(Soloud * aSoloud);

unsigned int Soloud_getBackendBufferSize(Soloud * aSoloud);

int Soloud_setSpeakerPosition(Soloud * aSoloud, unsigned int aChannel, float aX, float aY, float aZ);

int Soloud_getSpeakerPosition(Soloud * aSoloud, unsigned int aChannel, float * aX, float * aY, float * aZ);

unsigned int Soloud_play(Soloud * aSoloud, AudioSource * aSound);

unsigned int Soloud_playEx(Soloud * aSoloud, AudioSource * aSound, float aVolume /* = -1.0f */, float aPan /* = 0.0f */, int aPaused /* = 0 */, unsigned int aBus /* = 0 */);

unsigned int Soloud_playClocked(Soloud * aSoloud, double aSoundTime, AudioSource * aSound);

unsigned int Soloud_playClockedEx(Soloud * aSoloud, double aSoundTime, AudioSource * aSound, float aVolume /* = -1.0f */, float aPan /* = 0.0f */, unsigned int aBus /* = 0 */);

unsigned int Soloud_play3d(Soloud * aSoloud, AudioSource * aSound, float aPosX, float aPosY, float aPosZ);

unsigned int Soloud_play3dEx(Soloud * aSoloud, AudioSource * aSound, float aPosX, float aPosY, float aPosZ, float aVelX /* = 0.0f */, float aVelY /* = 0.0f */, float aVelZ /* = 0.0f */, float aVolume /* = 1.0f */, int aPaused /* = 0 */, unsigned int aBus /* = 0 */);

unsigned int Soloud_play3dClocked(Soloud * aSoloud, double aSoundTime, AudioSource * aSound, float aPosX, float aPosY, float aPosZ);

unsigned int Soloud_play3dClockedEx(Soloud * aSoloud, double aSoundTime, AudioSource * aSound, float aPosX, float aPosY, float aPosZ, float aVelX /* = 0.0f */, float aVelY /* = 0.0f */, float aVelZ /* = 0.0f */, float aVolume /* = 1.0f */, unsigned int aBus /* = 0 */);

unsigned int Soloud_playBackground(Soloud * aSoloud, AudioSource * aSound);

unsigned int Soloud_playBackgroundEx(Soloud * aSoloud, AudioSource * aSound, float aVolume /* = -1.0f */, int aPaused /* = 0 */, unsigned int aBus /* = 0 */);

int Soloud_seek(Soloud * aSoloud, unsigned int aVoiceHandle, double aSeconds);

void Soloud_stop(Soloud * aSoloud, unsigned int aVoiceHandle);

void Soloud_stopAll(Soloud * aSoloud);

void Soloud_stopAudioSource(Soloud * aSoloud, AudioSource * aSound);

int Soloud_countAudioSource(Soloud * aSoloud, AudioSource * aSound);

void Soloud_setFilterParameter(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aFilterId, unsigned int aAttributeId, float aValue);

float Soloud_getFilterParameter(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aFilterId, unsigned int aAttributeId);

void Soloud_fadeFilterParameter(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aFilterId, unsigned int aAttributeId, float aTo, double aTime);

void Soloud_oscillateFilterParameter(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aFilterId, unsigned int aAttributeId, float aFrom, float aTo, double aTime);

double Soloud_getStreamTime(Soloud * aSoloud, unsigned int aVoiceHandle);

double Soloud_getStreamPosition(Soloud * aSoloud, unsigned int aVoiceHandle);

int Soloud_getPause(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getVolume(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getOverallVolume(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getPan(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getSamplerate(Soloud * aSoloud, unsigned int aVoiceHandle);

int Soloud_getProtectVoice(Soloud * aSoloud, unsigned int aVoiceHandle);

unsigned int Soloud_getActiveVoiceCount(Soloud * aSoloud);

unsigned int Soloud_getVoiceCount(Soloud * aSoloud);

int Soloud_isValidVoiceHandle(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getRelativePlaySpeed(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getPostClipScaler(Soloud * aSoloud);

unsigned int Soloud_getMainResampler(Soloud * aSoloud);

float Soloud_getGlobalVolume(Soloud * aSoloud);

unsigned int Soloud_getMaxActiveVoiceCount(Soloud * aSoloud);

int Soloud_getLooping(Soloud * aSoloud, unsigned int aVoiceHandle);

int Soloud_getAutoStop(Soloud * aSoloud, unsigned int aVoiceHandle);

double Soloud_getLoopPoint(Soloud * aSoloud, unsigned int aVoiceHandle);

void Soloud_setLoopPoint(Soloud * aSoloud, unsigned int aVoiceHandle, double aLoopPoint);

void Soloud_setLooping(Soloud * aSoloud, unsigned int aVoiceHandle, int aLooping);

void Soloud_setAutoStop(Soloud * aSoloud, unsigned int aVoiceHandle, int aAutoStop);

int Soloud_setMaxActiveVoiceCount(Soloud * aSoloud, unsigned int aVoiceCount);

void Soloud_setInaudibleBehavior(Soloud * aSoloud, unsigned int aVoiceHandle, int aMustTick, int aKill);

void Soloud_setGlobalVolume(Soloud * aSoloud, float aVolume);

void Soloud_setPostClipScaler(Soloud * aSoloud, float aScaler);

void Soloud_setMainResampler(Soloud * aSoloud, unsigned int aResampler);

void Soloud_setPause(Soloud * aSoloud, unsigned int aVoiceHandle, int aPause);

void Soloud_setPauseAll(Soloud * aSoloud, int aPause);

int Soloud_setRelativePlaySpeed(Soloud * aSoloud, unsigned int aVoiceHandle, float aSpeed);

void Soloud_setProtectVoice(Soloud * aSoloud, unsigned int aVoiceHandle, int aProtect);

void Soloud_setSamplerate(Soloud * aSoloud, unsigned int aVoiceHandle, float aSamplerate);

void Soloud_setPan(Soloud * aSoloud, unsigned int aVoiceHandle, float aPan);

void Soloud_setPanAbsolute(Soloud * aSoloud, unsigned int aVoiceHandle, float aLVolume, float aRVolume);

void Soloud_setChannelVolume(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aChannel, float aVolume);

void Soloud_setVolume(Soloud * aSoloud, unsigned int aVoiceHandle, float aVolume);

void Soloud_setDelaySamples(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aSamples);

void Soloud_fadeVolume(Soloud * aSoloud, unsigned int aVoiceHandle, float aTo, double aTime);

void Soloud_fadePan(Soloud * aSoloud, unsigned int aVoiceHandle, float aTo, double aTime);

void Soloud_fadeRelativePlaySpeed(Soloud * aSoloud, unsigned int aVoiceHandle, float aTo, double aTime);

void Soloud_fadeGlobalVolume(Soloud * aSoloud, float aTo, double aTime);

void Soloud_schedulePause(Soloud * aSoloud, unsigned int aVoiceHandle, double aTime);

void Soloud_scheduleStop(Soloud * aSoloud, unsigned int aVoiceHandle, double aTime);

void Soloud_oscillateVolume(Soloud * aSoloud, unsigned int aVoiceHandle, float aFrom, float aTo, double aTime);

void Soloud_oscillatePan(Soloud * aSoloud, unsigned int aVoiceHandle, float aFrom, float aTo, double aTime);

void Soloud_oscillateRelativePlaySpeed(Soloud * aSoloud, unsigned int aVoiceHandle, float aFrom, float aTo, double aTime);

void Soloud_oscillateGlobalVolume(Soloud * aSoloud, float aFrom, float aTo, double aTime);

void Soloud_setGlobalFilter(Soloud * aSoloud, unsigned int aFilterId, Filter * aFilter);

void Soloud_setVisualizationEnable(Soloud * aSoloud, int aEnable);

float * Soloud_calcFFT(Soloud * aSoloud);

float * Soloud_getWave(Soloud * aSoloud);

float Soloud_getApproximateVolume(Soloud * aSoloud, unsigned int aChannel);

unsigned int Soloud_getLoopCount(Soloud * aSoloud, unsigned int aVoiceHandle);

float Soloud_getInfo(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aInfoKey);

unsigned int Soloud_createVoiceGroup(Soloud * aSoloud);

int Soloud_destroyVoiceGroup(Soloud * aSoloud, unsigned int aVoiceGroupHandle);

int Soloud_addVoiceToGroup(Soloud * aSoloud, unsigned int aVoiceGroupHandle, unsigned int aVoiceHandle);

int Soloud_isVoiceGroup(Soloud * aSoloud, unsigned int aVoiceGroupHandle);

int Soloud_isVoiceGroupEmpty(Soloud * aSoloud, unsigned int aVoiceGroupHandle);

void Soloud_update3dAudio(Soloud * aSoloud);

int Soloud_set3dSoundSpeed(Soloud * aSoloud, float aSpeed);

float Soloud_get3dSoundSpeed(Soloud * aSoloud);

void Soloud_set3dListenerParameters(Soloud * aSoloud, float aPosX, float aPosY, float aPosZ, float aAtX, float aAtY, float aAtZ, float aUpX, float aUpY, float aUpZ);

void Soloud_set3dListenerParametersEx(Soloud * aSoloud, float aPosX, float aPosY, float aPosZ, float aAtX, float aAtY, float aAtZ, float aUpX, float aUpY, float aUpZ, float aVelocityX /* = 0.0f */, float aVelocityY /* = 0.0f */, float aVelocityZ /* = 0.0f */);

void Soloud_set3dListenerPosition(Soloud * aSoloud, float aPosX, float aPosY, float aPosZ);

void Soloud_set3dListenerAt(Soloud * aSoloud, float aAtX, float aAtY, float aAtZ);

void Soloud_set3dListenerUp(Soloud * aSoloud, float aUpX, float aUpY, float aUpZ);

void Soloud_set3dListenerVelocity(Soloud * aSoloud, float aVelocityX, float aVelocityY, float aVelocityZ);

void Soloud_set3dSourceParameters(Soloud * aSoloud, unsigned int aVoiceHandle, float aPosX, float aPosY, float aPosZ);

void Soloud_set3dSourceParametersEx(Soloud * aSoloud, unsigned int aVoiceHandle, float aPosX, float aPosY, float aPosZ, float aVelocityX /* = 0.0f */, float aVelocityY /* = 0.0f */, float aVelocityZ /* = 0.0f */);

void Soloud_set3dSourcePosition(Soloud * aSoloud, unsigned int aVoiceHandle, float aPosX, float aPosY, float aPosZ);

void Soloud_set3dSourceVelocity(Soloud * aSoloud, unsigned int aVoiceHandle, float aVelocityX, float aVelocityY, float aVelocityZ);

void Soloud_set3dSourceMinMaxDistance(Soloud * aSoloud, unsigned int aVoiceHandle, float aMinDistance, float aMaxDistance);

void Soloud_set3dSourceAttenuation(Soloud * aSoloud, unsigned int aVoiceHandle, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Soloud_set3dSourceDopplerFactor(Soloud * aSoloud, unsigned int aVoiceHandle, float aDopplerFactor);

void Soloud_mix(Soloud * aSoloud, float * aBuffer, unsigned int aSamples);

void Soloud_mixSigned16(Soloud * aSoloud, short * aBuffer, unsigned int aSamples);