soloud.odin


@(default_calling_convention = "c")
foreign soloud {
	Soloud_create :: proc() -> ^Soloud ---
	Soloud_destroy :: proc(aSoloud: ^Soloud) ---
	Soloud_init :: proc(aSoloud: ^Soloud) -> Result ---
	Soloud_initEx :: proc(aSoloud: ^Soloud, aFlags: Flags = {.Clip_Roundoff}, aBackend: Backend = .Auto, aSampleRate: u32 = 0, aBufferSize: u32 = 0, aChannels: u32 = 2) -> Result ---
	Soloud_pause :: proc(aSoloud: ^Soloud) -> Result ---
	Soloud_resume :: proc(aSoloud: ^Soloud) -> Result ---
	Soloud_deinit :: proc(aSoloud: ^Soloud) ---
	Soloud_getVersion :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getErrorString :: proc(aSoloud: ^Soloud, aErrorCode: i32) -> cstring ---
	Soloud_getBackendId :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getBackendString :: proc(aSoloud: ^Soloud) -> cstring ---
	Soloud_getBackendChannels :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getBackendSamplerate :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getBackendBufferSize :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_setSpeakerPosition :: proc(aSoloud: ^Soloud, aChannel: u32, aX: f32, aY: f32, aZ: f32) -> b32 ---
	Soloud_getSpeakerPosition :: proc(aSoloud: ^Soloud, aChannel: u32, aX: ^f32, aY: ^f32, aZ: ^f32) -> b32 ---
	Soloud_play :: proc(aSoloud: ^Soloud, aSound: ^AudioSource) -> Handle ---
	Soloud_playEx :: proc(aSoloud: ^Soloud,
		aSound: ^AudioSource,
		aVolume: f32, /* = -1.0f */
		aPan: f32, /* = 0.0f */
		aPaused: b32, /* = 0 */
		aBus: u32, /* = 0 */) -> u32 ---
	Soloud_playClocked :: proc(aSoloud: ^Soloud, aSoundTime: f64, aSound: ^AudioSource) -> u32 ---
	Soloud_playClockedEx :: proc(aSoloud: ^Soloud,
		aSoundTime: f64,
		aSound: ^AudioSource,
		aVolume: f32, /* = -1.0f */
		aPan: f32, /* = 0.0f */
		aBus: u32, /* = 0 */) -> u32 ---
	Soloud_play3d :: proc(aSoloud: ^Soloud, aSound: ^AudioSource, aPosX: f32, aPosY: f32, aPosZ: f32) -> u32 ---
	Soloud_play3dEx :: proc(aSoloud: ^Soloud,
		aSound: ^AudioSource,
		aPosX: f32,
		aPosY: f32,
		aPosZ: f32,
		aVelX: f32, /* = 0.0f */
		aVelY: f32, /* = 0.0f */
		aVelZ: f32, /* = 0.0f */
		aVolume: f32, /* = 1.0f */
		aPaused: b32, /* = 0 */
		aBus: u32, /* = 0 */) -> u32 ---
	Soloud_play3dClocked :: proc(aSoloud: ^Soloud, aSoundTime: f64, aSound: ^AudioSource, aPosX: f32, aPosY: f32, aPosZ: f32) -> u32 ---
	Soloud_play3dClockedEx :: proc(aSoloud: ^Soloud,
		aSoundTime: f64,
		aSound: ^AudioSource,
		aPosX: f32,
		aPosY: f32,
		aPosZ: f32,
		aVelX: f32, /* = 0.0f */
		aVelY: f32, /* = 0.0f */
		aVelZ: f32, /* = 0.0f */
		aVolume: f32, /* = 1.0f */
		aBus: u32, /* = 0 */) -> u32 ---
	Soloud_playBackground :: proc(aSoloud: ^Soloud, aSound: ^AudioSource) -> u32 ---
	Soloud_playBackgroundEx :: proc(aSoloud: ^Soloud,
		aSound: ^AudioSource,
		aVolume: f32, /* = -1.0f */
		aPaused: b32, /* = 0 */
		aBus: u32, /* = 0 */) -> u32 ---
	Soloud_seek :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aSeconds: f64) -> i32 --- // TODO: should be b32?
	Soloud_stop :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) ---
	Soloud_stopAll :: proc(aSoloud: ^Soloud) ---
	Soloud_stopAudioSource :: proc(aSoloud: ^Soloud, aSound: ^AudioSource) ---
	Soloud_countAudioSource :: proc(aSoloud: ^Soloud, aSound: ^AudioSource) -> b32 ---
	Soloud_setFilterParameter :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFilterId: u32, aAttributeId: u32, aValue: f32) ---
	Soloud_getFilterParameter :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFilterId: u32, aAttributeId: u32) -> f32 ---
	Soloud_fadeFilterParameter :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFilterId: u32, aAttributeId: u32, aTo: f32, aTime: f64) ---
	Soloud_oscillateFilterParameter :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFilterId: u32, aAttributeId: u32, aFrom: f32, aTo: f32, aTime: f64) ---
	Soloud_getStreamTime :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f64 ---
	Soloud_getStreamPosition :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f64 ---
	Soloud_getPause :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> b32 ---
	Soloud_getVolume :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f32 ---
	Soloud_getOverallVolume :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f32 ---
	Soloud_getPan :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f32 ---
	Soloud_getSamplerate :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f32 ---
	Soloud_getProtectVoice :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> b32 ---
	Soloud_getActiveVoiceCount :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getVoiceCount :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_isValidVoiceHandle :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> b32 ---
	Soloud_getRelativePlaySpeed :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f32 ---
	Soloud_getPostClipScaler :: proc(aSoloud: ^Soloud) -> f32 ---
	Soloud_getMainResampler :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getGlobalVolume :: proc(aSoloud: ^Soloud) -> f32 ---
	Soloud_getMaxActiveVoiceCount :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_getLooping :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> b32 ---
	Soloud_getAutoStop :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> b32 ---
	Soloud_getLoopPoint :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> f64 ---
	Soloud_setLoopPoint :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aLoopPoint: f64) ---
	Soloud_setLooping :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aLooping: b32) ---
	Soloud_setAutoStop :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aAutoStop: b32) ---
	Soloud_setMaxActiveVoiceCount :: proc(aSoloud: ^Soloud, aVoiceCount: u32) -> i32 --- // TODO: should be b32?
	Soloud_setInaudibleBehavior :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aMustTick: b32, aKill: b32) ---
	Soloud_setGlobalVolume :: proc(aSoloud: ^Soloud, aVolume: f32) ---
	Soloud_setPostClipScaler :: proc(aSoloud: ^Soloud, aScaler: f32) ---
	Soloud_setMainResampler :: proc(aSoloud: ^Soloud, aResampler: u32) ---
	Soloud_setPause :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aPause: b32) ---
	Soloud_setPauseAll :: proc(aSoloud: ^Soloud, aPause: b32) ---
	Soloud_setRelativePlaySpeed :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aSpeed: f32) -> i32 --- // TODO: should be b32?
	Soloud_setProtectVoice :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aProtect: b32) ---
	Soloud_setSamplerate :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aSampleRate: f32) ---
	Soloud_setPan :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aPan: f32) ---
	Soloud_setPanAbsolute :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aLVolume: f32, aRVolume: f32) ---
	Soloud_setChannelVolume :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aChannel: u32, aVolume: f32) ---
	Soloud_setVolume :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aVolume: f32) ---
	Soloud_setDelaySamples :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aSamples: u32) ---
	Soloud_fadeVolume :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aTo: f32, aTime: f64) ---
	Soloud_fadePan :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aTo: f32, aTime: f64) ---
	Soloud_fadeRelativePlaySpeed :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aTo: f32, aTime: f64) ---
	Soloud_fadeGlobalVolume :: proc(aSoloud: ^Soloud, aTo: f32, aTime: f64) ---
	Soloud_schedulePause :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aTime: f64) ---
	Soloud_scheduleStop :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aTime: f64) ---
	Soloud_oscillateVolume :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFrom: f32, aTo: f32, aTime: f64) ---
	Soloud_oscillatePan :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFrom: f32, aTo: f32, aTime: f64) ---
	Soloud_oscillateRelativePlaySpeed :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aFrom: f32, aTo: f32, aTime: f64) ---
	Soloud_oscillateGlobalVolume :: proc(aSoloud: ^Soloud, aFrom: f32, aTo: f32, aTime: f64) ---
	Soloud_setGlobalFilter :: proc(aSoloud: ^Soloud, aFilterId: u32, aFilter: ^Filter) ---
	Soloud_setVisualizationEnable :: proc(aSoloud: ^Soloud, aEnable: b32) ---
	Soloud_calcFFT :: proc(aSoloud: ^Soloud) -> ^f32 --- // TODO: should be [^]f32?
	Soloud_getWave :: proc(aSoloud: ^Soloud) -> ^f32 --- // TODO: should be [^]f32?
	Soloud_getApproximateVolume :: proc(aSoloud: ^Soloud, aChannel: u32) -> f32 ---
	Soloud_getLoopCount :: proc(aSoloud: ^Soloud, aVoiceHandle: u32) -> u32 ---
	Soloud_getInfo :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aInfoKey: u32) -> f32 ---
	Soloud_createVoiceGroup :: proc(aSoloud: ^Soloud) -> u32 ---
	Soloud_destroyVoiceGroup :: proc(aSoloud: ^Soloud, aVoiceGroupHandle: u32) -> i32 --- // TODO: should be b32?
	Soloud_addVoiceToGroup :: proc(aSoloud: ^Soloud, aVoiceGroupHandle: u32, aVoiceHandle: u32) -> i32 --- // TODO: should be b32?
	Soloud_isVoiceGroup :: proc(aSoloud: ^Soloud, aVoiceGroupHandle: u32) -> i32 --- // TODO: should be b32?
	Soloud_isVoiceGroupEmpty :: proc(aSoloud: ^Soloud, aVoiceGroupHandle: u32) -> i32 --- // TODO: should be b32?
	Soloud_update3dAudio :: proc(aSoloud: ^Soloud) ---
	Soloud_set3dSoundSpeed :: proc(aSoloud: ^Soloud, aSpeed: f32) -> i32 --- // TODO: should be b32?
	Soloud_get3dSoundSpeed :: proc(aSoloud: ^Soloud) -> f32 ---
	Soloud_set3dListenerParameters :: proc(aSoloud: ^Soloud, aPosX: f32, aPosY: f32, aPosZ: f32, aAtX: f32, aAtY: f32, aAtZ: f32, aUpX: f32, aUpY: f32, aUpZ: f32) ---
	Soloud_set3dListenerParametersEx :: proc(aSoloud: ^Soloud,
		aPosX: f32,
		aPosY: f32,
		aPosZ: f32,
		aAtX: f32,
		aAtY: f32,
		aAtZ: f32,
		aUpX: f32,
		aUpY: f32,
		aUpZ: f32,
		aVelocityX: f32, /* = 0.0f */
		aVelocityY: f32, /* = 0.0f */
		aVelocityZ: f32, /* = 0.0f */) ---
	Soloud_set3dListenerPosition :: proc(aSoloud: ^Soloud, aPosX: f32, aPosY: f32, aPosZ: f32) ---
	Soloud_set3dListenerAt :: proc(aSoloud: ^Soloud, aAtX: f32, aAtY: f32, aAtZ: f32) ---
	Soloud_set3dListenerUp :: proc(aSoloud: ^Soloud, aUpX: f32, aUpY: f32, aUpZ: f32) ---
	Soloud_set3dListenerVelocity :: proc(aSoloud: ^Soloud, aVelocityX: f32, aVelocityY: f32, aVelocityZ: f32) ---
	Soloud_set3dSourceParameters :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aPosX: f32, aPosY: f32, aPosZ: f32) ---
	Soloud_set3dSourceParametersEx :: proc(aSoloud: ^Soloud,
		aVoiceHandle: u32,
		aPosX: f32,
		aPosY: f32,
		aPosZ: f32,
		aVelocityX: f32, /* = 0.0f */
		aVelocityY: f32, /* = 0.0f */
		aVelocityZ: f32, /* = 0.0f */) ---
	Soloud_set3dSourcePosition :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aPosX: f32, aPosY: f32, aPosZ: f32) ---
	Soloud_set3dSourceVelocity :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aVelocityX: f32, aVelocityY: f32, aVelocityZ: f32) ---
	Soloud_set3dSourceMinMaxDistance :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aMinDistance: f32, aMaxDistance: f32) ---
	Soloud_set3dSourceAttenuation :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aAttenuationModel: u32, aAttenuationRolloffFactor: f32) ---
	Soloud_set3dSourceDopplerFactor :: proc(aSoloud: ^Soloud, aVoiceHandle: u32, aDopplerFactor: f32) ---
	Soloud_mix :: proc(aSoloud: ^Soloud, aBuffer: [^]f32, aSamples: u32) ---
	Soloud_mixSigned16 :: proc(aSoloud: ^Soloud, aBuffer: [^]i16, aSamples: u32) ---
